// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`.not.toContainAnyKeys > fails when object contains one or more keys 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toContainAnyKeys([22m[32mexpected[39m[2m)[22m

Expected object not to contain any of the following keys:
  [32mArray [
  \\"name\\",
  \\"age\\",
][39m
Received:
  [31mObject {
  \\"age\\": 37,
  \\"name\\": \\"Steve the Pirate\\",
}[39m"
`;

exports[`.toContainAnyKeys > fails when object does not contain any keys 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toContainAnyKeys([22m[32mexpected[39m[2m)[22m

Expected object to contain any of the following keys:
  [32mArray [
  \\"occupation\\",
][39m
Received:
  [31mObject {
  \\"age\\": 37,
  \\"name\\": \\"Steve the Pirate\\",
}[39m"
`;
